--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -14,7 +14,7 @@
 .modal__footer{
     display: flex;
     flex-direction: column;
-    margin: 20px 0 32px 32px;
+    margin: 20px 32px 32px 32px;
     gap: 12px;
 }
 
@@ -30,4 +30,19 @@
     margin: 0;
     font-size: 20px;
     line-height: 24px;
+}
+
+.modal__delete{
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal__delete-button{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-family: 'CabinetGrotesk-Bold', Arial, sans-serif;
+    font-size: 20px;
+    line-height: 24px;
+    color: #FF4D00;
 }
