--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -38,7 +38,7 @@
     justify-content: space-between;
 }
 
-.modal__delete-button{
+.item__delete-button_visible{
     border: none;
     background-color: transparent;
     cursor: pointer;
@@ -46,4 +46,9 @@
     font-size: 20px;
     line-height: 24px;
     color: #FF4D00;
+    visibility: visible;
+}
+
+.item__delete-button_hidden{
+    visibility: hidden;
 }
