likes, delete, modal image, adding cards, profile data

--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -39,6 +39,7 @@
     height: 17px;
     background-color: transparent;
     margin-left: 60px;
+    visibility: visible;
 }
 
 .item-card__info {
@@ -53,4 +54,8 @@
 
 .item-card__button-liked{
     background-image: url('../../assets/likeButtonActive.svg');
+}
+
+.item-card__button-hidden{
+    visibility: hidden;
 }
