--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -8,7 +8,7 @@
 }
 
 .item-card__name{
-    position: absolute;
+    position: relative;
     max-width: 73px;
     max-height: 24px;
     background-color: #ffffff;
@@ -17,9 +17,10 @@
     line-height: 20px;
     border-radius: 10%;
     padding: 0 12px 0 12px;
-    margin-top: 15px;
-    margin-right: 28px;
+    margin: 0 10px 0 0;
     text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .item-card__image{
@@ -31,14 +32,12 @@
 }
 
 .item-card__button{
-    position: absolute;
+    position: relative;
     background-image: url('../../assets/likeButton.svg');
     border: none;
-    margin-top: 6px;
     width: 20px;
     height: 17px;
     background-color: transparent;
-    margin-left: 60px;
     visibility: visible;
 }
 
